# For Test

executable("remote_main") {
  include_dirs = []
  sources = [ "main.cc" ]
  deps = [
    "//base:base",
    "child:child_thread_impl",
    "//ipc:ipc",
    "delegate:all",
    "//services/service_manager:service_manager",
    "//services/service_manager/background:lib",
  ]
}

executable("main_test") {
  include_dirs = []
  sources = [ "test/main_test.cc" ]
  deps = [
    "//base:base",
    "child:child_thread_impl",
    "//ipc:ipc",
    "delegate:all",
    "//services/service_manager:service_manager",
    "//services/service_manager/background:lib",
    "v8:hello_world_test",
    "v8:v8_shell_test",
    "v8:v8_process_sample",
  ]
}

shared_library("mojo_main") {
  include_dirs = []
  sources = []
  deps = [ "mojo:db_mojom" ]
}
