# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//build/config/ui.gni")
import("//ppapi/buildflags/buildflags.gni")
import("//third_party/blink/public/public_features.gni")

if (is_component_build) {
  link_target_type = "source_set"
} else {
  link_target_type = "static_library"
}
target(link_target_type, "child_thread_impl") {
  # Targets external to content should always link to the public API.
  # Internal targets can link to this but only if they're child processes
  # (i.e. not content/browser or content/common) and only if they're inside the
  # content component (i.e. not content/test or content/shell).
  visibility = [
    "*",
  ]
  if (is_android) {
    # See comment in content/app/BUILD.gn above content_app_deps.
  }

  sources = [
    "child_process.cc",
    "child_process.h",
    "child_thread_impl.cc",
    "child_thread_impl.h",
    "thread_safe_sender.cc",
    "thread_safe_sender.h",
  ]

  configs += [ "//build/config:precompiled_headers" ]

  public_deps = [
    "//ipc",
    "//services/service_manager/public/mojom:mojom_blink",
  ]

  deps = [
    "//base",
    "//content/common",
    "//content/public/common:common_sources",
    "//mojo/core/embedder",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/platform",
    "//mojo/public/cpp/system",
    "//net",
    "//services/device/public/mojom:constants",
    "//services/resource_coordinator/public/cpp:resource_coordinator_cpp",
    "//services/service_manager/public/cpp",
    "//services/service_manager/public/mojom",
    "//services/service_manager/runner/common",
    "//third_party/blink/public:mojo_bindings",
    "//services/service_manager:service_manager",
  ]

  if (!use_default_render_theme) {
    sources -= [
    ]
  }

  if (is_android) {
    deps += [ "//third_party/android_tools:cpu_features" ]
  }

  if (is_linux) {
    deps += [
      "//services/service_manager/zygote",
    ]
  }

  if (is_win) {
    libs = [ "dwrite.lib" ]
  }

  if (enable_plugins) {
    deps += [
    ]
  } else {
    sources -= [
    ]
  }

  configs += [
    "//build/config/compiler:no_size_t_to_int_warning",
  ]
}
