# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//ppapi/buildflags/buildflags.gni")
import("//third_party/blink/public/public_features.gni")

if (is_component_build) {
  link_target_type = "source_set"
} else {
  link_target_type = "static_library"
}
target(link_target_type, "child_thread_impl") {
  # Targets external to content should always link to the public API.
  # Internal targets can link to this but only if they're child processes
  # (i.e. not content/browser or content/common) and only if they're inside the
  # content component (i.e. not content/test or content/shell).
  visibility = [
    "*",
  ]
  if (is_android) {
    # See comment in content/app/BUILD.gn above content_app_deps.
  }

  sources = [
    "child_process.cc",
    "child_process.h",
    "child_thread_impl.cc",
    "child_thread_impl.h",
    "thread_safe_sender.cc",
    "thread_safe_sender.h",
  ]

  configs += [ "//build/config:precompiled_headers" ]

  public_deps = [
    "//ipc",
    "//services/service_manager/public/mojom:mojom_blink",
  ]

  deps = [
    "//base",
    "//remote/common",
    "//content/public/common:common_sources",
    "//mojo/core/embedder",
    "//mojo/public/cpp/bindings:bindings",
    "//mojo/public/cpp/platform:platform",
    "//mojo/public/cpp/system:system",
    "//net",
    "//services/device/public/mojom:constants",
    "//services/resource_coordinator/public/cpp:resource_coordinator_cpp",
    "//services/service_manager/public/cpp",
    "//services/service_manager/public/mojom",
    "//services/service_manager/runner/common",
    "//third_party/blink/public:mojo_bindings",
  ]

  configs += [
    "//build/config/compiler:no_size_t_to_int_warning",
  ]
}
