# V8 samples

executable("hello_world_test") {
  sources = [ "hello-world.cc" ]

  deps = [
    "//v8:v8",
    "//v8:v8_libbase",
    "//v8:v8_libplatform",
  ]
}

executable("v8_shell_test") {
  sources = [ "shell.cc" ]

  deps = [
    "//v8:v8",
    "//v8:v8_libbase",
    "//v8:v8_libplatform",
  ]
}

executable("v8_process_sample") {
  sources = [ "process.cc" ]

  deps = [
    "//v8:v8",
    "//v8:v8_libbase",
    "//v8:v8_libplatform",
  ]
}
