# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

# This target includes all mojom interfaces which can be used from
# Source/platform. In particular these mojom interfaces can't use types that
# are typemapped to a type in Source/core.

# Kept separate from "mojom_platform" because the Java bindings are specifically
# needed by Android's implementation of payments
# (in components/payments/content/android and chrome/android/).
# those high-level service worker mojom files there.

mojom("mojom_platform_impl") {
  sources = [ "associated_interfaces/associated_interfaces.mojom" ]

  public_deps = [ "//mojo/public/mojom/base" ]
}

mojom("mojom_core_impl") {
  public_deps = [
    ":mojom_platform_impl",
    "//mojo/public/mojom/base",
  ]

  overridden_deps_blink = [ ":mojom_platform_impl" ]
  component_deps_blink = []
}

